update: divorce driver version from libs version
Co-authored-by: Jason Dellaluce <jasondellaluce@gmail.com>
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/userspace/falco/config_falco.h.in
+++ b/userspace/falco/config_falco.h.in
@@ -31,4 +31,5 @@ limitations under the License.
 #define FALCO_ENGINE_PLUGINS_DIR "${FALCO_ABSOLUTE_SHARE_DIR}/plugins/"
 
 #define PROBE_NAME "@PROBE_NAME@"
-#define DRIVER_VERSION "@PROBE_VERSION@"
+#define DRIVER_VERSION "@DRIVER_API_VERSION@"
+#define LIBS_VERSION "@FALCOSECURITY_LIBS_VERSION@"
