--- a/scripts/debian/postinst.in
+++ b/scripts/debian/postinst.in
@@ -17,9 +17,8 @@
 #
 set -e
 
-DKMS_PACKAGE_NAME="@PACKAGE_NAME@"
+DKMS_PACKAGE_NAME="@DRIVER_PACKAGE_NAME@"
 DKMS_VERSION="@PROBE_VERSION@"
-NAME="@PACKAGE_NAME@"
 
 postinst_found=0
 
